# thesis

./: .gitignore  README.md  literature-keywords.yaml  literature-review.yaml  proc.html  proc.qmd  proc.quarto_ipynb_1  proc.quarto_ipynb_10  proc.quarto_ipynb_11  proc.quarto_ipynb_12  proc.quarto_ipynb_13  proc.quarto_ipynb_14  proc.quarto_ipynb_15  proc.quarto_ipynb_16  proc.quarto_ipynb_17  proc.quarto_ipynb_18  proc.quarto_ipynb_19  proc.quarto_ipynb_2  proc.quarto_ipynb_20  proc.quarto_ipynb_21  proc.quarto_ipynb_22  proc.quarto_ipynb_23  proc.quarto_ipynb_24  proc.quarto_ipynb_25  proc.quarto_ipynb_26  proc.quarto_ipynb_27  proc.quarto_ipynb_28  proc.quarto_ipynb_29  proc.quarto_ipynb_3  proc.quarto_ipynb_30  proc.quarto_ipynb_31  proc.quarto_ipynb_32  proc.quarto_ipynb_33  proc.quarto_ipynb_34  proc.quarto_ipynb_35  proc.quarto_ipynb_36  proc.quarto_ipynb_37  proc.quarto_ipynb_38  proc.quarto_ipynb_39  proc.quarto_ipynb_4  (+12 more)
data/: parliamentarians.parquet  speech_df.parquet  speech_df_full.parquet
data/tramites_txt/: tramite_001.txt  tramite_002.txt  tramite_003.txt  tramite_004.txt  tramite_005.txt  tramite_006.txt  tramite_007.txt  tramite_008.txt  tramite_009.txt  tramite_010.txt  tramite_011.txt  tramite_012.txt  tramite_013.txt  tramite_014.txt  tramite_015.txt  tramite_016.txt  tramite_017.txt  tramite_018.txt  tramite_019.txt  tramite_020.txt  tramite_021.txt  tramite_022.txt  tramite_023.txt  tramite_024.txt  (+5 more)
review-state/: research-brief.md
scripts/: doctor_config.py  init_project.py
shared/: __init__.py  api_utils.py  project_config.py
(+77 files in other folders)
