[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcn-scraper",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
]

[tool.uv.sources]
bcn-scraper = { path = "../bcn-scraper", editable = true }
